--- a/src/app/auth/auth.component.html
+++ b/src/app/auth/auth.component.html
@@ -1,3 +1,5 @@
+<mat-slide-toggle>Toggle me!</mat-slide-toggle>
+<app-loader></app-loader>
 <form [formGroup]="authForm" (submit)="onSubmitHandler()" class="authForm">
     {{errors }}
     <div class="authIntro">{{intro}}</div>
