--- a/src/app/auth/auth.component.html
+++ b/src/app/auth/auth.component.html
@@ -1,6 +1,6 @@
 <mat-slide-toggle>Toggle me!</mat-slide-toggle>
-<!-- <app-loader *ngIf="isLoading">!!!!!!!!!!</app-loader> -->
-<mat-spinner></mat-spinner>
+<app-loader></app-loader>
+<!-- <mat-spinner></mat-spinner> -->
 <form [formGroup]="authForm" (ngSubmit)="onSubmitHandler()" class="authForm">
     {{errors }}
     <div class="authIntro">{{intro}}</div>
