--- a/src/app/todolist/todolist.component.html
+++ b/src/app/todolist/todolist.component.html
@@ -1,7 +1,1 @@
-<div class="todolist" *ngFor="let todolist of todolists$ | async">
-  <h5 class="todolist__title">{{todolist.title}}</h5>
-  <ul class="todolist__block">
-    <input type="checkbox">
-    <li class="todolist__item">///</li>
-  </ul>
-</div>
+<app-todo [todolists$]="todolists$"></app-todo>
