Job features check

--- a/src/app/todolist/todolist.component.html
+++ b/src/app/todolist/todolist.component.html
@@ -1,2 +1,4 @@
 <input class="input" [formControl]="inputValue" />
 <app-todo class="todo" [todolists$]="todolists$"></app-todo>
+<app-sidebar></app-sidebar>
+<div class="rightSide">1</div>
