--- a/src/app/todolist/todolist.component.scss
+++ b/src/app/todolist/todolist.component.scss
@@ -17,3 +17,12 @@
   display: grid;
   grid-template-columns: 300px 300px 300px;
 }
+
+.rightSide{
+  width: 400px;
+  height: 500px;
+  background-color: red;
+  position: absolute;
+  right: 0;
+  top: 0;
+}
