--- a/src/styles.scss
+++ b/src/styles.scss
@@ -33,6 +33,6 @@ $todolist-theme: mat.define-light-theme((
 @include mat.all-component-themes($todolist-theme);
 
 /* You can add global styles to this file, and also import other style files */
-
+//@import "~ng-zorro-antd/ng-zorro-antd.min.css";
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
